fixup! 문제 해결 연습 > 프로그래머스 > Level 1 > 과일장수
- 코드의 가독성 향상을 위해서, 하위 메서드들로 분리하고 의미 부여